--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,6 +32,26 @@ section#telefone {
   background: url(../imagens/frame-iphone.png) no-repeat;
 }
 
+section#redes-sociais img {
+  width: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.397);
+  box-sizing: border-box;
+
+}
+
+section#redes-sociais {
+  text-align: right;
+}
+
+section#redes-sociais img:hover {
+  border: solid rgba(245, 245, 245, 0.603);
+  transform: translate(-4px, -4px);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.521);
+  transition: transform 0.3s, border 1s;
+}
+
 iframe#tela {
   position: relative;
   top: 80px;
